syntax = "proto3";

package dailyai_proto;

message TextFrame {
    string text = 1;
}

message AudioFrame {
    bytes audio = 1;
}

message TranscriptionFrame {
    string text = 1;
    string participant_id = 2;
    string timestamp = 3;
}

message Frame {
    oneof frame {
        TextFrame text = 1;
        AudioFrame audio = 2;
        TranscriptionFrame transcription = 3;
    }
}
